# hri-safe-remote-control-system

./: .gitignore  README.md
drivers/C/tutorials/: vsc_tutorial_1  vsc_tutorial_2  vsc_tutorial_3  vsc_tutorial_4
hri_interfaces/: CMakeLists.txt  package.xml
hri_safety_sense/: CMakeLists.txt  README.md  ReadMe.md  package.xml  vsc_interface.launch
hri_safety_sense/include/: JoystickHandler.h  MsgHandler.h  VscProcess.h
hri_safety_sense/launch/: vsc_interface.launch  vsc_interface.launch.py
hri_safety_sense/src/: JoystickHandler.cpp  SerialInterface.c  VscProcess.cpp  main.cpp
hri_safety_sense/srv/: EmergencyStop.srv  KeyString.srv  KeyValue.srv
