<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_safety_sense</name>
  <version>0.1.5</version>
  <description>HRI Library for Serial Communication in ROS</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author>hri</author>
  <maintainer email="js@greenzie.co">Jackson Stanhope</maintainer>

  <author>Matej Boxan</author>
  <maintainer email="matej.boxan@norlab.ulaval.ca">Matej Boxan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hri_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

